--- a/SPHSampleTest/Podfile
+++ b/SPHSampleTest/Podfile
@@ -4,6 +4,7 @@
 target 'SPHSampleTest' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
+  pod 'RSLoadingView'
 
   # Pods for SPHSampleTest
 
